crates/xabi/tests/ui/unsupported_shapes/data_tuple_field.rs
#[xabi::data]
pub struct BadData {
    pub value: (u32, u32),
}

fn main() {}
